// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Popover/hoc should pass config to the popover component 1`] = `
<div>
  {"code":"a code"}
  -
  <div
    title="child"
  >
    {}
  </div>
</div>
`;

exports[`common/Popover/hoc should pass props to the wrapped component 1`] = `
<div>
  {}
  -
  <div
    title="child"
  >
    {"prop":"a prop","and":"an other"}
  </div>
</div>
`;
